unified the form-actions part of the form by splitting the parts up into partials. Fixed Issue #23 and Issue #24. Save and continue is now something that you can easily place on any admin form and runs using AJAX so that the page doesn't refresh ala Issue #24. Fixed an issue where tooltips were being created multiple times by wymeditor. Fixed a select tag issue in Firefox where the padding that was added was distorting the display.

--- a/public/stylesheets/refinery/refinery.css
+++ b/public/stylesheets/refinery/refinery.css
@@ -498,7 +498,7 @@ label {
 	display: block;
 }
 
-textarea, select { 
+textarea { 
 	padding: 5px;
 }
 
